--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "haisl-manager",
     "description": "A Vacation Home Manager.",
     "version": "0.0.1",
-    "license": "",
+    "license": "MIT",
     "private": true,
     "scripts": {
         "ng": "ng",
