--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@nestjs/platform-express": "^6.5.3",
         "@nestjs/typeorm": "^6.1.3",
         "@nrwl/angular": "8.4.7",
+        "@sentry/node": "^5.6.2",
         "apollo-angular": "^1.6.0",
         "apollo-angular-link-http": "^1.6.0",
         "apollo-cache-inmemory": "^1.3.2",
