--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "apollo-client": "^2.6.0",
         "apollo-link": "^1.2.11",
         "apollo-server-express": "^2.8.1",
+        "bcrypt": "^3.0.6",
         "class-transformer": "^0.2.3",
         "cli-color": "^1.4.0",
         "core-js": "^2.5.7",
@@ -82,6 +83,7 @@
         "mysql": "^2.17.1",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~6.4.0",
         "sprintf-js": "^1.1.2",
@@ -101,12 +103,14 @@
         "@nrwl/nest": "8.1.0",
         "@nrwl/node": "8.1.2",
         "@nrwl/workspace": "8.4.7",
+        "@types/bcrypt": "^3.0.0",
         "@types/dotenv": "^6.1.1",
         "@types/hapi__joi": "^15.0.3",
         "@types/jest": "24.0.17",
         "@types/node": "~8.9.5",
         "@types/passport": "^1.0.0",
         "@types/passport-jwt": "^3.0.1",
+        "@types/passport-local": "^1.0.33",
         "@types/sprintf-js": "^1.1.2",
         "codelyzer": "~5.0.1",
         "coveralls": "3.0.6",
