--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "class-transformer": "^0.2.3",
         "cli-color": "^1.4.0",
         "core-js": "^2.5.7",
+        "date-fns": "^2.4.1",
         "graphql": "^14.4.2",
         "graphql-tag": "^2.10.0",
         "graphql-tools": "^4.0.5",
@@ -89,6 +90,7 @@
         "sprintf-js": "^1.1.2",
         "type-graphql": "^0.17.4",
         "typeorm": "^0.2.18",
+        "uuid": "^3.3.3",
         "zone.js": "^0.9.1"
     },
     "devDependencies": {
@@ -112,6 +114,7 @@
         "@types/passport-jwt": "^3.0.1",
         "@types/passport-local": "^1.0.33",
         "@types/sprintf-js": "^1.1.2",
+        "@types/uuid": "^3.4.5",
         "codelyzer": "~5.0.1",
         "coveralls": "3.0.6",
         "cypress": "~3.3.2",
